# ClashKingTracking

./: .gitignore  Dockerfile  README.md  bot_clan_tracking.py  config.json  example.env  go.mod  go.sum  main.go  main.py  makefile  player_tracking.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  sonar-project.properties  tracking.py
bot/: old_player_tracking.py  player_tracking.py  reddit.py
classes/: player.py
local/: clash.py  main.py  settings.py  sockets.py
models/: battlelogs.go  bot_players.go  clash.go  common.go  global_clans.go  runtime_scripts.go  wars.go
scripts/: __init__.py  battlelogs.go  battlelogs_test.go  bot_clans.go  bot_clans.py  bot_clans_test.go  bot_players.go  bot_players.py  bot_players_test.go  capital_lb.py  events.go  events_test.go  events_ws.py  giveaways.go  giveaways.py  giveaways_test.go  global_clans.go  global_clans.py  global_clans_test.go  global_war_store.py  global_war_track.py  helpers.go  json_helpers.go  legends.py  reddit.go  reddit.py  reddit_test.go  roster_automations.py  scheduled.go  scheduled.py  scheduled_test.go  snapshot_store.go  snapshot_store_test.go  tracking.py  wars.go  wars_store.go  wars_test.go
tests/: test_clan_games_reminder_tracker.py  test_inactivity_reminder_tracker.py  test_raid_reminder_tracker.py  test_tracking.py  test_war_reminder_tracker.py
tracking/: bot_clans.py  bot_players.py  capital_lb.py  global_clans.py  legends.py  scheduled.py
utility/: base_tracker.py  classes.py  config.py  constants.py  health.py  http.py  kafka_mock.py  keycreation.py  mongo.py  (+2 more)
(+94 files in other folders)
